# CovidTracking

./: README.md  crawl.sh  meson.build  org.example.App.json  pypi-dependencies.json  python3-certifi.json  python3-cppy.json  python3-matplotlib.json  python3-numpy.json  python3-pandas.json  python3-python-dateutil.json  python3-scrapy.json  python3-setuptools.json  python3-setuptools_rust.json  python3-setuptools_scm.json  requirements.txt
data/: org.example.App.desktop.in  org.example.App.gschema.xml
news/: news.json
po/: meson.build
provinces/: case.json  caseByDay.json  caseProvince.json  deathByDay.json  dose.json  province.json  scrapy.cfg  vaccine.json
provinces/provinces/: items.py  middlewares.py  pipelines.py  settings.py
provinces/provinces/spiders/: case.py  case_by_day.py  case_province.py  death_by_day.py  dose.py  province.py  vaccine.py
src/: builder_example.glade  covidtracking.in  main.py  meson.build  news.ui~  test.py  test1.py  vaccine.py  window.py  window.ui  window.ui~  windowtest.py
src/cases/: case.py  least_case_province.py  one_month_daily_case.py  one_month_daily_death.py  three_month_daily_case.py  three_month_daily_death.py  top_case_province.py  total_daily_case.py  total_daily_death.py
src/images/: 1month_daily_dose.py  3month_daily_dose.py  distribution.py  least_provinces.py  maps.py  one_month_daily_dose.py  three_month_daily_dose.py  top_provinces.py  total_daily_dose.py  total_dose.py  vaccine.py
src/news/: news.py
vaccine/: scrapy.cfg
vaccine/vaccine/: items.py  middlewares.py  pipelines.py  settings.py
(+1 files in other folders)
